--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "ayncws",
+  "name": "@anbcodes/asyncws",
   "version": "0.0.1",
   "description": "A websocket wrapper for node and web that allows you to give it a config and it will forward methods from the client to the server",
   "main": "main.js",
-  "scripts": {
-  },
+  "private": false,
   "keywords": ["websockets", "server", "client"],
   "author": "anbcodes",
   "license": "MIT",
